==> ajkajkbkc/PallasGD_COMM/PallasApp/bsp_uart.c <==
#include "FreeRTOS.h"
#include "timers.h"
#include "app_opts.h"
#include "bsp_uart.h"
#include "plc_variable.h"
#include "bsp_dct.h"
#include "kalyke_uart_task.h"
#include "kalyke_event.h"
#include "kalyke_internet_task.h"
#include "app_log.h"
#include "app_tool.h"
#include "cmsis_os.h"
#include "mb_crc.h"
#define UART0_RX_TIMER_ID   1
#define UART0_TX_TIMER_ID   2
#define UART1_RX_TIMER_ID   3
#define UART1_TX_TIMER_ID   4
#define UART2_RX_TIMER_ID   5
#define UART2_TX_TIMER_ID   6
#define UART_WORKER_TASK_STACK_SIZE     1024
#define UART_WORKER_TASK_PRIORITY       uartTaskPriority

static void bsp_uart0_init(unsigned long llv_BaudRate, unsigned char lcv_Parity, unsigned char lcv_WordLength, unsigned char lcv_StopBits)
{
    //uint32_t lpUart1Priority;
    LOGV("bsp_uart", "Enter %s, llv_BaudRate=%d, lcv_Parity=%d, lcv_WordLength=%d, lcv_StopBits=%d.\r\n", __func__, llv_BaudRate, lcv_Parity, lcv_WordLength, lcv_StopBits);
    if (g_Uart0WorkerHandler != NULL)
    {
        LOGV("bsp_uart", "COM0 worker is running, so just return.\r\n");
        return;
    }

    huart1.Init.BaudRate = llv_BaudRate;
    switch(lcv_StopBits)
    {
    case UART_STB_1:
        huart1.Init.StopBits = UART_STOPBITS_1;
        break;
    case UART_STB_2:
        huart1.Init.StopBits = UART_STOPBITS_2;
        break;
    }
    switch(lcv_Parity)
    {
    case UART_NO:
        huart1.Init.Parity = UART_PARITY_NONE;
        break;

    case UART_EVEN:
        huart1.Init.Parity = UART_PARITY_EVEN;//偶
        break;

    case UART_ODD:
        huart1.Init.Parity = UART_PARITY_ODD;//奇
        break;
    }
    if (lcv_WordLength == 8)
    {
        huart1.Init.WordLength = UART_WORDLENGTH_8B;
    }
    else
    {
        huart1.Init.WordLength = UART_WORDLENGTH_9B;
    }
    //lpUart1Priority = NVIC_GetPriority(LPUART1_IRQn);
    //LOGD("bsp_uart", "lpUart1Priority = %d", lpUart1Priority);
INIT_DONE:
    if (xTaskCreate(uart0_worker_task, "Uart_worker0",
                    UART_WORKER_TASK_STACK_SIZE, NULL,
                    UART_WORKER_TASK_PRIORITY, (TaskHandle_t *)&g_Uart0WorkerHandler) != pdPASS)
    {
        LOGV("bsp_uart", "Uart_worker0 task creation failed!\r\n");
        while (1)
            ;
    }
}

void bsp_uart0_send_buffer(unsigned char *lcp_SendBuff, unsigned short lsv_Length)
{
    LOGV("bsp_uart", "Enter %s(), lsv_Length = %d", __func__, lsv_Length);
    hexdump(lcp_SendBuff, lsv_Length);
    bsp_uart_tx_enable(0);
    //LPUART_RTOS_Send(&gLpuart0RTOSHandle, (uint8_t *)lcp_SendBuff, lsv_Length);
    HAL_UART_Transmit(&huart1, lcp_SendBuff, lsv_Length, HAL_MAX_DELAY);
    bsp_send_finished(0);
}

void bsp_uart1_init(unsigned long llv_BaudRate, unsigned char lcv_Parity, unsigned char lcv_WordLength, unsigned char lcv_StopBits)
{
    LOGV("bsp_uart", "Enter %s, llv_BaudRate=%d, lcv_Parity=%d, lcv_WordLength=%d, lcv_StopBits=%d.\r\n", __func__, llv_BaudRate, lcv_Parity, lcv_WordLength, lcv_StopBits);
    set485_delay(llv_BaudRate);
    if (g_Uart1WorkerHandler != NULL)
    {
        LOGV("bsp_uart", "COM1 worker is running, so just return.\r\n");
        return;
    }

    huart3.Init.BaudRate = llv_BaudRate;
    switch(lcv_StopBits)
    {
    case UART_STB_1:
        huart3.Init.StopBits = UART_STOPBITS_1;
        break;
    case UART_STB_2:
        huart3.Init.StopBits = UART_STOPBITS_2;
        break;
    }
    switch(lcv_Parity)
    {
    case UART_NO:
        huart3.Init.Parity = UART_PARITY_NONE;
        break;

    case UART_EVEN:
        huart3.Init.Parity = UART_PARITY_EVEN;//偶
        break;

    case UART_ODD:
        huart3.Init.Parity = UART_PARITY_ODD;//奇
        break;
    }
    if (lcv_WordLength == 8)
    {
        huart3.Init.WordLength = UART_WORDLENGTH_8B;
    }
    else
    {
        huart3.Init.WordLength = UART_WORDLENGTH_9B;
    }
    if (xTaskCreate(uart1_worker_task, "Uart_worker1",
                    UART_WORKER_TASK_STACK_SIZE, NULL,
                    UART_WORKER_TASK_PRIORITY, (TaskHandle_t *)&g_Uart1WorkerHandler) != pdPASS)
    {
        LOGE("bsp_uart", "Uart_worker1 task creation failed!\r\n");
        while (1)
            ;
    }
}

void bsp_uart1_send_buffer(unsigned char *lcp_SendBuff, unsigned short lsv_Length)
{
    LOGI("bsp_uart", "Enter %s(), lsv_Length = %d, mcv_Mode = %u\r\n", __func__, lsv_Length, gtp_UartPort[1].mcv_Mode);
    hexdump(lcp_SendBuff, lsv_Length);
    bsp_uart_tx_enable(1);
    //LPUART_RTOS_Send(&gLpuart1RTOSHandle, (uint8_t *)lcp_SendBuff, lsv_Length);
    HAL_UART_Transmit(&huart3, lcp_SendBuff, lsv_Length, HAL_MAX_DELAY);
    bsp_send_finished(1);
}

void bsp_get_uart_configure_info(uart_port_info_st *ltp_UartInfo)
{
    /* 用户串口0     RS485*/
#if (PRINT_LOG_OPEN == 1) && (UART1_AS_LOG == 1)
    ltp_UartInfo[0].pConfigFunc = bsp_uart_init_dummy;
    ltp_UartInfo[0].pSendFunc = bsp_uart_send_buffer_dummy;
    ltp_UartInfo[0].pTimerInitFunc = bsp_uart_time_init_dummy;
#else
    ltp_UartInfo[0].pConfigFunc = bsp_uart0_init;
    ltp_UartInfo[0].pSendFunc = bsp_uart0_send_buffer;
    ltp_UartInfo[0].pTimerInitFunc = bsp_uart0_time_init;
#endif
    ltp_UartInfo[0].msv_SmFlagStartELement = 110;
    ltp_UartInfo[0].msv_SdFlagStartELement = 110;

    /* 用户串口1 */
#if (PRINT_LOG_OPEN == 1) && (UART3_AS_LOG == 1)
    ltp_UartInfo[1].pConfigFunc = bsp_uart_init_dummy;
    ltp_UartInfo[1].pSendFunc = bsp_uart_send_buffer_dummy;
    ltp_UartInfo[1].pTimerInitFunc = bsp_uart_time_init_dummy;
#else
    ltp_UartInfo[1].pConfigFunc = bsp_uart1_init;
    ltp_UartInfo[1].pSendFunc = bsp_uart1_send_buffer;
    ltp_UartInfo[1].pTimerInitFunc = bsp_uart1_time_init;
#endif
    ltp_UartInfo[1].msv_SmFlagStartELement = 120;
    ltp_UartInfo[1].msv_SdFlagStartELement = 120;

//    /* 用户串口2       */
//#if (LOG_OPEN == 1) && (LOG_USE_LPUART8 == 1)
//    ltp_UartInfo[2].pConfigFunc = bsp_uart_init_dummy;
//    ltp_UartInfo[2].pSendFunc = bsp_uart_send_buffer_dummy;
//    ltp_UartInfo[2].pTimerInitFunc = bsp_uart_time_init_dummy;
//#elif 1 //CC100没有COM2
//    ltp_UartInfo[2].pConfigFunc = bsp_uart_init_dummy;
//    ltp_UartInfo[2].pSendFunc = bsp_uart_send_buffer_dummy;
//    ltp_UartInfo[2].pTimerInitFunc = bsp_uart_time_init_dummy;
//#else
//    ltp_UartInfo[2].pConfigFunc = bsp_uart2_init;
//    ltp_UartInfo[2].pSendFunc = bsp_uart2_send_buffer;
//    ltp_UartInfo[2].pTimerInitFunc = bsp_uart2_time_init;
//#endif
//    ltp_UartInfo[2].msv_SmFlagStartELement = 130;
//    ltp_UartInfo[2].msv_SdFlagStartELement = 130;
}
